--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@nextui-org/spinner": "^2.0.33",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "jwt-decode": "^4.0.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
