--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "swiper": "^11.1.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
