--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@nextui-org/spinner": "^2.0.33",
     "axios": "^1.7.3",
     "bootstrap": "^5.3.3",
+    "cookies-next": "^4.2.1",
+    "dotenv": "^16.4.5",
     "jwt-decode": "^4.0.0",
     "next": "^14.2.3",
     "react": "^18.3.1",
@@ -24,6 +26,7 @@
     "react-timer-hook": "^3.0.7",
     "react-use": "^17.5.0",
     "sass": "^1.77.2",
+    "sonner": "^1.5.0",
     "swiper": "^11.1.3"
   },
   "devDependencies": {
